fixed styling of pictures too small for the width of the page

--- a/src/app/sections/picture/picture.component.scss
+++ b/src/app/sections/picture/picture.component.scss
@@ -4,6 +4,7 @@ img {
 }
 
 .col-12 {
+  width: fit-content;
   padding-right: 0;
   padding-left: 10px;
   background-color: rgba(0,0,0,0.05);
